--- a/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medication/pharmacy-edit-medication.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medication/pharmacy-edit-medication.component.html
@@ -27,6 +27,6 @@
 </div>
 <app-modal
   *ngIf="showModal"
-  (closeModal)="showModal = false"
+  (onClose)="showModal = false"
   (onSubmit)="deleteMedication()"
 ></app-modal>
