--- a/AngularApp/src/app/components/change-password/change-password.component.css
+++ b/AngularApp/src/app/components/change-password/change-password.component.css
@@ -1,9 +1,9 @@
 .modal {
     display: block;
-    padding-top: 20px;
+    padding-top: 80px;
     backdrop-filter: blur(2px);
     background-color: rgba(0, 0, 0, 0.3);
-    z-index: 1002;
+    z-index: 1;
 }
 .modal-header, .modal-footer {
     border: none !important;
@@ -13,6 +13,12 @@
 }
 .modal-title {
     color: black;
+}
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: -10px;
 }
 .modal-footer {
     margin-top: -5px;
