--- a/AngularApp/src/app/pages/multi-roles/edit-medical-institution/edit-medical-institution.component.css
+++ b/AngularApp/src/app/pages/multi-roles/edit-medical-institution/edit-medical-institution.component.css
@@ -14,6 +14,14 @@
 .form-control, .form-select {
     width: 70%;
 }
+.change-password-link {
+    cursor: pointer;
+    text-decoration: none;
+    margin-top: 5px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+}
 
 @media(max-width: 991px){
     .thumbnail {
