--- a/AngularApp/src/app/pages/multi-roles/chat/chat.component.html
+++ b/AngularApp/src/app/pages/multi-roles/chat/chat.component.html
@@ -34,6 +34,6 @@
 </div>
 <app-modal
   *ngIf="tempMessageId"
-  (onClose)="tempMessageId = 0"
+  (closeModal)="tempMessageId = 0"
   (onSubmit)="deleteMessage()"
 ></app-modal>
