--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -60,6 +60,6 @@
 </div>
 <app-modal
   *ngIf="showModal"
-  (onClose)="showModal = false"
+  (closeModal)="showModal = false"
   (onSubmit)="confirmOrder(form.value)"
 ></app-modal>
