--- a/AngularApp/src/app/pages/doctor/doctor-patient-prescription/doctor-patient-prescription.component.html
+++ b/AngularApp/src/app/pages/doctor/doctor-patient-prescription/doctor-patient-prescription.component.html
@@ -211,7 +211,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="onClose()">
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">
           Zatvori
         </button>
       </div>
