--- a/AngularApp/src/app/pages/index-page/index-page.component.html
+++ b/AngularApp/src/app/pages/index-page/index-page.component.html
@@ -10,9 +10,14 @@
             <input type="password" class="form-control" name="lozinka" ngModel>
         </div>
         <div class="form-group form-check mt-2">
-            <input type="checkbox" id="checkbox-input" class="form-check-input" name="rememberme" [ngModel]="false">
+            <input type="checkbox" id="checkbox-input" class="form-check-input" name="rememberme" ngModel>
             <label for="checkbox-input">{{ 'remember_me' | translate }}</label>
         </div>
         <button class="btn btn-primary btn-block mt-1">{{ 'continue' | translate }}</button>
     </form>
 </div>
+
+<div *ngIf="isForgotPasswordModalOpen" class="modal" tabindex="-1" role="dialog" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" (click)="closeForgotPasswordModal()" aria-label="Close">
